--- a/src/site.css
+++ b/src/site.css
@@ -1,3 +1,9 @@
 div header {
     padding-top: 3rem;
 }
+
+form p {
+    color: rgb(255, 102, 102);
+    text-decoration: underline;
+    text-decoration-color: white;
+}
